# quizy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose-dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/core/: cookies.py  google_oauth.py  security.py  settings.py
app/databases/: postgres.py  redis_server.py
app/databases/migrations/: env.py
app/databases/migrations/versions/: 6870cdb1a3b8_widen_user_picture_and_drop_bogus_.py  90eb342b9721_added_quiz_models.py  a1c8d9e7f2b4_add_session_result_tables.py  aebdf8939146_initial_auth_tables.py  f3a8f7d6c9b2_add_session_reconnect_constraints.py
app/databases/models/: __init__.py  base.py  quiz.py  user.py
app/databases/repositories/: base_repository.py  quiz_repository.py  user_repository.py
app/dependencies/: database.py  redis.py  redis_server.py  token.py  user_validation.py
app/routers/: auth.py  quizzes.py  sessions.py  users.py
app/schemas/: auth.py  quiz.py  types.py
app/services/: auth_service.py  quiz_service.py  session_service.py  session_ws_manager.py  user_validation.py
app/utils/: exceptions.py  logger.py
docs/: frontend-services.md  frontend-websockets.md
